# audioplayer

./: .gitignore  CMakeLists.txt  CompressedAudio.txt
.trae/rules/: git-commit-message.md
src/: main.cpp
src/compression/: lossless_compressor.cpp  lossless_compressor.h
src/core/: audio_engine.cpp  audio_engine.h  player.cpp  player.h
src/models/: playlist.cpp  playlist.h  song.cpp  song.h
src/services/: file_scanner.cpp  file_scanner.h
src/transition/: audio_analyzer.cpp  audio_analyzer.h  livesort_algorithm.cpp  livesort_algorithm.h
ui/: main_window.cpp  main_window.h
ui/content/: content_area.cpp  content_area.h
ui/panel/: right_panel.cpp  right_panel.h
ui/sidebar/: sidebar.cpp  sidebar.h
ui/statusbar/: status_bar.cpp  status_bar.h
